--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body { margin:0; font-family: system-ui, Segoe UI, Roboto, Helvetica, Arial; background:var(--bg); color:var(--ink); }
     header { padding:16px 20px; border-bottom:1px solid #222833; background:linear-gradient(180deg,#12141a,#0e0f12); position:sticky; top:0; }
     h1 { margin:0; font-size:20px; letter-spacing:.3px; }
-    .wrap { padding:12px; display:grid; grid-template-columns: 420px 1fr; gap:12px; }
+    .wrap { padding:12px; display:grid; grid-template-columns: 400px 1fr; gap:12px; }
     @media (max-width: 900px){ .wrap{ grid-template-columns: 1fr; } }
     .card { background:var(--panel); border:1px solid #222833; border-radius:14px; padding:12px; }
     label { display:block; font-size:12px; color:var(--muted); margin-bottom:4px; }
@@ -86,19 +86,6 @@
           <input id="gap" type="number" value="2" min="0" step="0.1" />
         </div>
         <div>
-          <label>Max duration (sec)</label>
-          <input id="maxSeconds" type="number" value="600" min="60" step="30" />
-        </div>
-      </div>
-      <div class="row">
-        <div>
-          <label>Truncate long pieces</label>
-          <select id="truncateMode">
-            <option value="clip" selected>Clip to fit cap</option>
-            <option value="skip">Skip if too long</option>
-          </select>
-        </div>
-        <div>
           <label>&nbsp;</label>
           <button id="buildBtn" class="primary" style="width:100%">Build WAV</button>
         </div>
@@ -125,7 +112,7 @@
 (() => {
   'use strict';
 
-  // Show runtime errors in the status line
+  // ====== Surface runtime errors in the status line ======
   window.addEventListener('error', (e) => {
     const el = document.getElementById('status');
     if (el) el.textContent = 'JS error: ' + (e.message || (e.error && e.error.message) || e);
@@ -168,8 +155,6 @@
     space: document.getElementById('spaceFreq'),
     count: document.getElementById('count'),
     gap: document.getElementById('gap'),
-    maxSeconds: document.getElementById('maxSeconds'),
-    truncateMode: document.getElementById('truncateMode'),
     testBtn: document.getElementById('testBtn'),
     testLog: document.getElementById('testLog'),
     dataSource: document.getElementById('dataSource'),
@@ -184,7 +169,8 @@
   const bundled = { base:"", items:[], loaded:false };
 
   function toggleBundledUI(){
-    els.bundledControls.style.display = (els.dataSource.value === 'bundled') ? 'flex' : 'none';
+    const mode = els.dataSource.value;
+    els.bundledControls.style.display = (mode === 'bundled') ? 'flex' : 'none';
   }
   toggleBundledUI();
   els.dataSource.addEventListener('change', toggleBundledUI);
@@ -216,7 +202,7 @@
         }
         base = (json.base || '').trim() || deriveBaseFromUrl(url);
       }
-      items = items.filter(x => /^(ARTWORK-0[1-8])\/(\d{3})$/.test(x));
+      items = items.filter(x => /^(ARTWORK-0[1-8])\/([0-9]{3})$/.test(x));
       if (!items.length) throw new Error('manifest had no valid items');
       bundled.base = base; bundled.items = items; bundled.loaded = true;
       els.manifestStatus.textContent = `loaded ${items.length} items from ${base||'(root)'}`;
@@ -229,9 +215,12 @@
   }
   els.loadManifestBtn.addEventListener('click', loadManifest);
 
-  // ====== Helpers ======
+  // ====== CR/LF constants + helpers to avoid escape confusion ======
+  const CR = String.fromCharCode(13);
+  const LF = String.fromCharCode(10);
   function normalizeCRLF(s){
-    return (s || "").replace(/\r(?!\n)/g, "\r\n");
+    const re = new RegExp(CR + '(?!' + LF + ')', 'g');
+    return (s || '').replace(re, CR + LF);
   }
 
   // ====== Remote directory & file discovery ======
@@ -256,11 +245,11 @@
       const doc = new DOMParser().parseFromString(html, "text/html");
       const files = [...doc.querySelectorAll('a[href]')]
         .map(a=>({name:(a.textContent||"").trim(), href:a.getAttribute('href')||""}))
-        .filter(o=> /^\d+$/.test(o.name) || /^\d+\/?$/.test(o.href))
+        .filter(o=> /^[0-9]+$/.test(o.name) || /^[0-9]+\/?$/.test(o.href))
         .map(o=> o.name.endsWith('/') ? o.name.slice(0,-1) : o.name);
       if (files.length){ dirCache.set(dir, files); return files; }
     }catch{}
-    const probe = []; for (let i=0;i<=200;i++) probe.push(i.toString().padStart(3,'0'));
+    const probe = []; for (let i=0; i<=200; i++) probe.push(i.toString().padStart(3,'0'));
     dirCache.set(dir, probe); return probe;
   }
 
@@ -330,11 +319,11 @@
   const printableSet = "#ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789:;.,-'()/&$?! ";
   const replacementMap = {
     '"':"'", '=':'-', '*':'X', '_':'-', '@':'A', '%':'O',
-    '[':'(', ']':')', '{':'(', '}':')', '\\':'/', '^':'-', '|':'/',
+    '[':'(', ']':')', '{':'(', '}':')', [String.fromCharCode(92)]:'/', '^':'-', '|':'/',
     '`':"'", '~':'-', '<':'(', '>':')'
   };
   const normalizeChar = ch => {
-    if (ch === '\r' || ch === '\n') return ch; // keep CR/LF
+    if (ch === CR || ch === LF) return ch; // keep CR/LF
     const u = ch.toUpperCase();
     const safe = replacementMap[u] || replacementMap[ch] || u;
     return printableSet.includes(safe) ? safe : ' ';
@@ -347,29 +336,29 @@
       'A':0b00011,'B':0b11001,'C':0b01110,'D':0b01001,'E':0b00001,'F':0b01101,'G':0b11010,'H':0b10100,
       'I':0b00110,'J':0b01011,'K':0b01111,'L':0b10010,'M':0b11100,'N':0b01100,'O':0b11000,'P':0b10110,
       'Q':0b10111,'R':0b01010,'S':0b00101,'T':0b10000,'U':0b00111,'V':0b11110,'W':0b10011,'X':0b11101,
-      'Y':0b10101,'Z':0b10001,'\r':0b01000,'\n':0b00010,' ':0b00100
+      'Y':0b10101,'Z':0b10001,[CR]:0b01000,[LF]:0b00010,' ':0b00100
     },
     FIGS: {
       '-':0b00011,'?':0b11001,':':0b01110,'$':0b01001,'3':0b00001,'!':0b01101,'&':0b11010,'#':0b10100,
       '8':0b00110,"'":0b01011,'(':0b01111,')':0b10010,'.':0b11100,',':0b01100,'9':0b11000,'0':0b10110,
       '1':0b10111,'4':0b01010,'Bell':0b00101,'5':0b10000,'7':0b00111,';':0b11110,'2':0b10011,'/':0b11101,
-      '6':0b10101,'+':0b10001,'\r':0b01000,'\n':0b00010,' ':0b00100
+      '6':0b10101,'+':0b10001,[CR]:0b01000,[LF]:0b00010,' ':0b00100
     }
   };
 
   const GUARD_SHIFT_BITS = 0.0, GUARD_CR_BITS = 0.0, GUARD_LF_BITS = 0.0, LINE_LEAD_MS = 0, START_LEAD_MS = 0, DEFAULT_STRETCH = 1.002;
   function buildBaudotFramesFromText(text){
     const frames=[]; let currentShift=null; let lastWasCR=false;
-    frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\r'], guardBits: GUARD_CR_BITS});
-    frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\n'], guardBits: GUARD_LF_BITS});
+    frames.push({type:'char', code: BAUDOT_TABLE.LTRS[CR], guardBits: GUARD_CR_BITS});
+    frames.push({type:'char', code: BAUDOT_TABLE.LTRS[LF], guardBits: GUARD_LF_BITS});
     frames.push({type:'char', code: LTRS, guardBits: GUARD_SHIFT_BITS});
     if (START_LEAD_MS>0) frames.push({type:'hold', sec: START_LEAD_MS/1000});
     for (const raw of text){
       const ch = normalizeChar(raw);
-      if (ch=== '\r'){ frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\r'], guardBits: GUARD_CR_BITS}); lastWasCR=true; continue; }
-      if (ch=== '\n'){
-        if (!lastWasCR) frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\r'], guardBits: GUARD_CR_BITS});
-        frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\n'], guardBits: GUARD_LF_BITS}); lastWasCR=false; if (LINE_LEAD_MS>0) frames.push({type:'hold', sec: LINE_LEAD_MS/1000}); continue;
+      if (ch===CR){ frames.push({type:'char', code: BAUDOT_TABLE.LTRS[CR], guardBits: GUARD_CR_BITS}); lastWasCR=true; continue; }
+      if (ch===LF){
+        if (!lastWasCR) frames.push({type:'char', code: BAUDOT_TABLE.LTRS[CR], guardBits: GUARD_CR_BITS});
+        frames.push({type:'char', code: BAUDOT_TABLE.LTRS[LF], guardBits: GUARD_LF_BITS}); lastWasCR=false; if (LINE_LEAD_MS>0) frames.push({type:'hold', sec: LINE_LEAD_MS/1000}); continue;
       }
       lastWasCR=false; let needed=null;
       if (ch in BAUDOT_TABLE.LTRS) needed='LTRS'; else if (ch in BAUDOT_TABLE.FIGS) needed='FIGS'; else continue;
@@ -377,8 +366,8 @@
       frames.push({type:'char', code: BAUDOT_TABLE[needed][ch]});
     }
     if (currentShift!=='LTRS') frames.push({type:'char', code: LTRS, guardBits: GUARD_SHIFT_BITS});
-    frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\r'], guardBits: GUARD_CR_BITS});
-    frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\n'], guardBits: GUARD_LF_BITS});
+    frames.push({type:'char', code: BAUDOT_TABLE.LTRS[CR], guardBits: GUARD_CR_BITS});
+    frames.push({type:'char', code: BAUDOT_TABLE.LTRS[LF], guardBits: GUARD_LF_BITS});
     return frames;
   }
 
@@ -395,4 +384,136 @@
     const { baud, mark, space, stopBits, sampleRate, stretch = DEFAULT_STRETCH } = opts;
     const twoPi = 2*Math.PI; const spbF = (sampleRate/baud)*stretch; let carry=0, phase=0; const out=[];
     const emit=(freq, units)=>{ let total = spbF*units + carry; let n = Math.floor(total); carry = total - n; const inc = twoPi*freq/sampleRate; for(let i=0;i<n;i++){ out.push(Math.sin(phase)); phase+=inc; if (phase>=twoPi) phase-=twoPi; } };
-    for (const f of frames){ if (f.type==='hold'){ emit(opts.mark, f.sec*baud); continue; } if (f.type==='char'){ const code=f.code & 0x1F; emit*
+    for (const f of frames){ if (f.type==='hold'){ emit(opts.mark, f.sec*baud); continue; } if (f.type==='char'){ const code=f.code & 0x1F; emit(space,1); for(let i=0;i<5;i++){ const bit=(code>>i)&1; emit(bit?mark:space,1);} emit(mark, stopBits); if (f.guardBits&&f.guardBits>0) emit(mark, f.guardBits); } }
+    emit(mark,2.0); return out;
+  }
+
+  function encodeWav(samples, sampleRate){
+    const buffer = new ArrayBuffer(44 + samples.length*2); const view = new DataView(buffer);
+    const putStr=(o,s)=>{ for(let i=0;i<s.length;i++) view.setUint8(o+i, s.charCodeAt(i)); };
+    putStr(0,'RIFF'); view.setUint32(4, 36 + samples.length*2, true);
+    putStr(8,'WAVE');
+    putStr(12,'fmt '); view.setUint32(16,16,true);
+    view.setUint16(20,1,true); view.setUint16(22,1,true);
+    view.setUint32(24,sampleRate,true); view.setUint32(28,sampleRate*2,true);
+    view.setUint16(32,2,true); view.setUint16(34,16,true);
+    putStr(36,'data'); view.setUint32(40, samples.length*2, true);
+    for(let i=0;i<samples.length;i++){
+      const s=Math.max(-1,Math.min(1,samples[i]))*32767;
+      view.setInt16(44+i*2, s|0, true);
+    }
+    return buffer;
+  }
+
+  // ====== Build one big WAV (silence between pieces; full text) ======
+  els.buildBtn.addEventListener('click', async () => {
+    try{
+      els.buildBtn.disabled = true; els.downloadWrap.textContent = ""; els.player.src = "";
+      const n = Math.max(1, Math.min(500, parseInt(els.count.value||"25",10)));
+      const gapSec = Math.max(0, parseFloat(els.gap.value||"2"));
+
+      setStatus('Sampling artwork…');
+      const picks = await sampleRandomArt(n);
+      if (!picks.length){ setStatus('No items to process'); return; }
+
+      // Render list
+      els.list.innerHTML = picks.map(p=>{
+        const href = (els.dataSource.value==='bundled' && bundled.base) ? `${bundled.base}/${p.pagePath}` : (p.originUrl||p.pagePath);
+        return `<li><a href="${href}" target="_blank" rel="noopener">${p.dir}/${p.filename}</a></li>`;
+      }).join('');
+      els.countInfo.textContent = `(${picks.length})`;
+
+      // Audio params
+      const baud  = parseFloat(els.baud.value||"45.45");
+      const stopB = parseFloat(els.stopBits.value||"1.5");
+      const mark  = parseFloat(els.mark.value||"2125");
+      const space = parseFloat(els.space.value||"2295");
+
+      const sr = getSampleRate();
+      const silence = new Float32Array(Math.max(0, Math.round(sr * gapSec))); // pure silence gap
+      const pcm = [];
+
+      let used = 0;
+      for (let i=0;i<picks.length;i++){
+        setStatus(`Fetching ${i+1}/${picks.length}… ${picks[i].dir}/${picks[i].filename}`);
+        let raw="";
+        if (els.dataSource.value === 'bundled') raw = await fetchArtTextBundled(picks[i].pagePath);
+        else raw = await fetchArtTextRemote(picks[i].pagePath);
+        if (!raw || !raw.trim()) continue; // skip empties
+        const text = normalizeText(raw);    // FULL TEXT
+        const frames = buildBaudotFramesFromText(text);
+        const sig = afskFromFrames(frames, { baud: baud, mark: mark, space: space, stopBits: stopB, sampleRate: sr });
+        if (sig.length){ pcm.push(new Float32Array(sig)); used++; }
+        if (gapSec > 0 && i < picks.length - 1) pcm.push(silence);
+      }
+
+      if (!used){ setStatus('All fetched items were empty or failed to parse.'); return; }
+
+      // Concatenate
+      setStatus('Encoding WAV…');
+      const total = pcm.reduce((acc,a)=>acc + a.length, 0);
+      const out = new Float32Array(total); let off=0; for (const a of pcm){ out.set(a, off); off += a.length; }
+      const wav = encodeWav(out, sr);
+      const blob = new Blob([wav], { type:'audio/wav' });
+      const url = URL.createObjectURL(blob);
+      els.player.src = url; els.player.load();
+      const minutes = (out.length/sr)/60;
+      document.getElementById('downloadWrap').innerHTML = `<a download="rtty_art_${used}.wav" href="${url}">Download WAV</a> · items: ${used} · duration ~ ${minutes.toFixed(1)} min · mode: ${els.dataSource.value}`;
+      setStatus('Ready');
+    }catch(e){
+      console.error(e); setStatus('Error: ' + (e.message||e));
+    }finally{
+      els.buildBtn.disabled = false;
+    }
+  });
+
+  // ====== Self-tests ======
+  function runTests(){
+    const log=[]; const ok=(m)=>log.push('✅ '+m); const bad=(m)=>log.push('❌ '+m);
+    try{
+      const tCRLF = normalizeText('A' + CR + LF + 'B');
+      if (tCRLF.indexOf('A' + CR + LF + 'B') !== -1) ok('CRLF preserved by normalizeText'); else bad('CRLF not preserved');
+      const tSlash = normalizeText('X' + String.fromCharCode(92) + 'Y');
+      if (tSlash.includes('X/Y')) ok('Backslash mapped to slash'); else bad('Backslash mapping failed');
+      const sample = normalizeText('~@%{}[]|^*');
+      const expect = '-AO()()/-X';
+      if (sample === expect) ok('Replacement map correct'); else bad('Replacement map wrong: ' + sample + ' != ' + expect);
+      const allowed = new Set((printableSet + CR + LF).split(''));
+      if ([...sample].every(ch => allowed.has(ch))) ok('normalizeText emits only allowed chars'); else bad('normalizeText emitted disallowed chars');
+      if (BAUDOT_TABLE.LTRS['A']===0b00011) ok('BAUDOT LTRS A'); else bad('BAUDOT LTRS A wrong');
+      if ('1' in BAUDOT_TABLE.FIGS) ok('BAUDOT FIGS 1 present'); else bad('BAUDOT FIGS 1 missing');
+      const frames = buildBaudotFramesFromText('HI' + CR + LF);
+      if (frames.length>=10) ok('Frames built'); else bad('Frames too short');
+      const fNums = buildBaudotFramesFromText('12' + CR + LF);
+      const sawFIGS = fNums.some(f => f.type==='char' && f.code===FIGS);
+      if (sawFIGS) ok('FIGS shift emitted for digits'); else bad('FIGS shift not emitted for digits');
+      const sig = afskFromFrames(frames, { baud:45.45, mark:2125, space:2295, stopBits:1.5, sampleRate:48000 });
+      if (sig.length>0) ok('AFSK produced samples'); else bad('AFSK produced empty signal');
+      const wav = encodeWav(new Float32Array(sig), 48000);
+      const dv = new DataView(wav);
+      const tag = String.fromCharCode(dv.getUint8(0),dv.getUint8(1),dv.getUint8(2),dv.getUint8(3));
+      const wave = String.fromCharCode(dv.getUint8(8),dv.getUint8(9),dv.getUint8(10),dv.getUint8(11));
+      if (tag==='RIFF' && wave==='WAVE') ok('WAV header OK'); else bad('WAV header incorrect');
+      const crOnly = 'LINE1' + CR + 'LINE2' + CR;
+      const crlf = normalizeCRLF(crOnly);
+      if (crlf.endsWith('LINE2' + CR + LF)) ok('normalizeCRLF converts CR to CRLF'); else bad('normalizeCRLF did not convert CR to CRLF');
+      // extra tests
+      const wav0 = encodeWav(new Float32Array(), 48000);
+      if (wav0.byteLength === 44) ok('Zero-length WAV header is 44 bytes'); else bad('Zero-length WAV header wrong size');
+      const keep = 'A' + CR + LF + 'B';
+      if (normalizeCRLF(keep) === keep) ok('normalizeCRLF leaves CRLF intact'); else bad('normalizeCRLF altered existing CRLF');
+      const unknown = normalizeText('🙂');
+      if (unknown === ' ') ok('Unknown glyphs map to space'); else bad('Unknown glyph not mapped to space');
+      // fmt/data chunk tags present
+      const fmtTag = String.fromCharCode(dv.getUint8(12),dv.getUint8(13),dv.getUint8(14),dv.getUint8(15));
+      const dataTag = String.fromCharCode(dv.getUint8(36),dv.getUint8(37),dv.getUint8(38),dv.getUint8(39));
+      if (fmtTag==='fmt ' && dataTag==='data') ok('fmt/data chunks present'); else bad('fmt/data chunks missing');
+    }catch(e){ bad('Exception in tests: '+(e.message||e)); }
+    els.testLog.style.display='block';
+    els.testLog.textContent = log.join('\n');
+  }
+  els.testBtn.addEventListener('click', runTests);
+})();
+</script>
+</body>
+</html>
